Problems fixed in develop branch :
   * Restart of ph.x with 2D boundary conditions has been fixed, see issue#102 on gitlab 

New in version 6.4:
  * Experimental version of SCDM localization with k-points, activated like for
    k=0 by specifying in &system namelist a value > 0 for "localization_thr".
  * It is now possible to limit the number of xml step elements printed out
    for relaxation or molecular dynamics simulation, by setting the environment
    variable MAX_XML_STEPS. Useful in case of very long trajectories to avoid 
    issues due to too large file size.  
  * EPW works with ultrasoft pseudopotentials (F. Giustino, S. Poncé, R. Margine)
  * New code hp.x to compute Hubbard parameters using density-functional
    perturbation theory (experimental stage) (I. Timrov, N. Marzari, and M. Cococcioni, 
    Phys. Rev. B 98, 085127 (2018); arXiv:1805.01805)
  * The PHonon code works with the Hubbard U correction (experimental stage)
    (A. Floris, S. de Gironcoli, E.K.U. Gross, and M. Cococcioni,
    Phys. Rev. B 84, 161102(R) (2011);
    A. Floris, I. Timrov, B. Himmetoglu, N. Marzari, S. de Gironcoli,
    and M. Cococcioni, in preparation)
  * XDM now works also for USPP and norm-conserving PP

Problems fixed in version 6.4 (+ = in qe-6.3-backports as well) :
  + Codes reading scf data recomputed celldm parameters also if ibrav=0
    This produced confusing output and had the potential to break some codes
  + index not correctly initialized in LSDA phonon with core corrections 
  + GTH pseudopotentials in analytical form wrongly computed in some cases
  + projwfc.x not working with new xml format in noncolinear/spinorbit case 
  + Starting with .EXIT file present ("dry run") crashed with new file format
  + Some space groups were missing
  + Random MPI crashes with DFT+U due to small discrepancies between values
    of Hubbard occupancies on different processors
  + Variable-cell optimization wasn't working with Tkatchenko-Scheffler vdW